--- a/Boek.html
+++ b/Boek.html
@@ -25,3 +25,5 @@
 
 <h1>Op pagina karakters heb ik de vraag beantwoord. Wie zijn Hester en Tom?</h1>
 <div class="dribble">Anchorage is een stad in Alaska. Dit boek is eigenlijk de toekomst van de wereld. Er zijn luchtschepen zoals je op de achtergrond ziet. Veel steden drijven, want er zijn geen continenten meer. Als veel steden naar het noorden gaan hebben ze rubs banden nodig die over het ijs gaan.</div>
+</body>
+</html>
