--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
     <body>
       <link href="opmaak.css" rel="stylesheet">
-      <h1>Praditors Gold</h1>
+      <h1>Praditor's Gold</h1>
     <table>
       <tr>
         <th colspan="4">Menu</th>
@@ -20,11 +20,11 @@
       </tr>
     </table>
 
-    <div class="inleiding">Mijn naam is <span id="naam">Tess</span>. Ik zit in 1vh3. DIt is mijn website over het boek Predators Gold.</span></div>
+    <div class="inleiding">Mijn naam is <span id="naam">Tess</span>. Ik zit in 1vh3. DIt is mijn website over het boek Predator's Gold.</span></div>
 
     <div  id="schrijver">De schrijver = Philip Reeve.</span></div>
 
-      <div class="sjaak">Op de pagina <span id="naam">Nieusgierig</span> kun je een klein stukje lezen over het boek. Als je dan nog meer wilt weten heb ik nog wat meer geschreven en heb ik een paar vragen beantwoord bij de pagina <span id="naam">Het boek</span>.
+      <div class="sjaak">Op de pagina <span id="naam">Nieuwsgierig</span> kun je een klein stukje lezen over het boek. Als je dan nog meer wilt weten heb ik nog wat meer geschreven en heb ik een paar vragen beantwoord bij de pagina <span id="naam">Het boek</span>.
         Wil je weten wat mijn mening is over het boek kijk dan even op de pagina <span id="naam">Mening</span>.</div>
     </body>
 </html>
