--- a/mening.html
+++ b/mening.html
@@ -7,7 +7,7 @@
 
     <body>
       <link href="opmaak.css" rel="stylesheet">
-      <h1>Pradito'rs Gold</h1>
+      <h1>Praditor's Gold</h1>
 <table>
   <tr>
     <th colspan="4">Menu</th>
