--- a/Samevatting.html
+++ b/Samevatting.html
@@ -25,6 +25,6 @@
      Om te overleven gaat Anchorage naar de Dode Continent. Maar dat doen ze niet zonder gevaar.</div>
 <div class="naastelkaar">
   <div  class="waarom">Snap je niet wie die Hester of Tom zijn, ga dan naar pagina Het boek. Want dan leg ik je uit wie dat zijn.</div>
-  <div  class="hoezo">Weet je ook niet wat de stad Anchorage is of wat de Dode Continent betekend, ga dan naar pagina het boek.</div>
+  <div  class="hoezo">Weet je ook niet wat de stad Anchorage is of wat de Dode Continent betekend, ga dan naar pagina Het boek.</div>
 
 </div>
