--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       </tr>
       <tr>
         <th><a href="index.html">Hoofdpagina</a></td>
-        <th><a href="Samevatting.html">nieuwsgierig</a></td>
+        <th><a href="Samevatting.html">Nieuwsgierig</a></td>
         <th><a href="Boek.html">Het boek</a></td>
         <th><a href="mening.html">Mening</a></td>
       </tr>
