--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       </tr>
     </table>
 
-    <div class="inleiding">Mijn naam is <span id="naam">Tess</span>. Ik zit in 1vh3. DIt is mijn website over het boek Predator's Gold.</span></div>
+    <div class="inleiding">Mijn naam is <span id="naam">Tess</span>. Ik zit in 1vh3. Dit is mijn website over het boek Predator's Gold.</span></div>
 
     <div  id="schrijver">De schrijver = Philip Reeve.</span></div>
 
