--- a/Samevatting.html
+++ b/Samevatting.html
@@ -21,8 +21,8 @@
 </table>
 
 <div class="Samenvatting">Als Tom en Hester worden aangevallen, vluchten ze met hun luchtschip naar de ijsstad Anchorage.
-     Maar Anchorage is niet vielig meer. De stad is bijna verlaten door een plaag (een ziekte dus) en word ook nog achtervolg door andere luchtschip dieven.
-     Om te overleven gaat Anchorage naar de Dode Continent. Maar dat doen ze niet zonder gevaar.</div>
+     Maar Anchorage is niet vielig meer. De stad is bijna verlaten door een plaag (een ziekte) en word ook nog achtervolg door luchtschipdieven.
+     Om te overleven gaat Anchorage naar het Dode Continent. Maar dat doen ze niet zonder gevaar.</div>
 <div class="naastelkaar">
   <div  class="waarom">Snap je niet wie die Hester of Tom zijn, ga dan naar pagina Het boek. Want dan leg ik je uit wie dat zijn.</div>
   <div  class="hoezo">Weet je ook niet wat de stad Anchorage is of wat de Dode Continent betekend, ga dan naar pagina Het boek.</div>
