--- a/Boek.html
+++ b/Boek.html
@@ -24,6 +24,6 @@
 </table>
 
 <h1>Op pagina karakters heb ik de vraag beantwoord. Wie zijn Hester en Tom?</h1>
-<div class="dribble">Anchorage is een stad in Alaska. Dit boek is eigenlijk de toekomst van de wereld. Er zijn luchtschepen zoals je op de achtergrond ziet. Veel steden drijven, want er zijn geen continenten meer. Als veel steden naar het Noorden gaan hebben ze rubs banden nodig die over het ijs gaan. De dode continent is eingelijk Amerika, maar ze noemen het de dode continent, omdat niemad er ooit is terug gekeerd.</div>
+<div class="dribble">Anchorage is een stad in Alaska. Dit boek is eigenlijk de toekomst van de wereld. Er zijn luchtschepen zoals je op de achtergrond ziet. Veel steden drijven, want er zijn geen continenten meer. Als veel steden naar het Noorden gaan hebben ze rupsbanden nodig die over het ijs gaan. Het Dode Continent is eigelijk Amerika, maar ze noemen het  Dode Continent, omdat niemad er ooit is van terug gekeerd.</div>
 </body>
 </html>
