--- a/karakters.html
+++ b/karakters.html
@@ -23,5 +23,5 @@
   </tr>
 </table>
 
-<div class="Hester">Hester is een meisje die bij een bombardement was in londen. Zij veloor haar neus en ze heeft ook een litteken op haar wang. Ze is best verlegen en ze past vaak op wat ze doet. Ze is het liefst alleen bij Tom, want ze vertrouwt niemand. Ze heeft een beetje rood bruin haar.</div>
-<div class="Tom">Tom is een historicus. Hij houd van verhalen en geschiedenis. Hij is vroeger netjes opgevoed, dus hij durft vaak niemand te onderbreken of te beledigen. Hij is heel erg verliefd op Hester.</div>
+<div class="Hester">Hester is een meisje die bij een bombardement was in londen. Zij veloor haar neus en ze heeft ook een litteken op haar wang. Ze is best verlegen en ze past vaak op wat ze doet. Ze is het liefst alleen bij Tom, want ze vertrouwt niemand. Ze heeft een beetje roodbruin haar.</div>
+<div class="Tom">Tom is een historicus. Hij houdt van verhalen en geschiedenis. Hij is vroeger netjes opgevoed, dus hij durft vaak niemand te onderbreken of te beledigen. Hij is heel erg verliefd op Hester.</div>
